tests/negative/type_continue_outside_loop.uzpp
// XATOLIK_KUTILMOQDA: type: sikl tashqarisida davom etish
ulash "uzpp_runtime.hpp"
butun asosiy() {
    davom_etish;
    qaytarish 0;
}
